@@ -1,0 +1,3 @@
+module M = struct
+  let f x = x +1
+end
