@@ -45,6 +45,9 @@ Next version (4.05.0):
   This can be tested with ocamlopt -config
   (Sébastien Hinderer)
 
+- PR#7137, GPR#960: "-open" command line flag now accepts a module path 
+  (not a module name) (Arseniy Alekseyev and Leo White)
+
 ### Standard library:
 
 - PR#6975, GPR#902: Truncate function added to stdlib Buffer module
